Bug #114571 --> if the mock channel gets canceled and we are writing into a cache entry, doom the cache entry. r=darin sr=bienvenu